* bad merge of CLinker (utils check call should be taken) * TestNull jtreg test directive fixed